fixed text alignment of item titles

--- a/css/styles.css
+++ b/css/styles.css
@@ -179,6 +179,7 @@ footer a:hover {
     margin-left: 0.25vw;
     margin-bottom: 0;
     margin-top: 10px;
+    text-align: start;
 }
 
 .description-wrapper {
